Week7 Update
Changing  the division way of methods