@@ -3,21 +3,26 @@ import java.io.*;
 import java.lang.reflect.*;
 import java.net.URL;
 import java.net.URLClassLoader;
-
 public class Nineteen {
-        public static void main(String args[]) throws Exception{
-        //Read Configuration file and save each field into jarFile,words,Freqs
+    public static String Words;
+    public static String Freqs;
+    public static String Print;
+    public static void readClass() throws Exception{
         File configurationFile = new File("./conf.txt");
         Scanner sc = new Scanner(configurationFile);
-        String jarFile  = sc.nextLine().split(":")[1];
-        String Words = sc.nextLine().split(":")[1];
-        String Freqs = sc.nextLine().split(":")[1];
-        String Print = sc.nextLine().split(":")[1];
+         Words = sc.nextLine().split(":")[1];
+         Freqs = sc.nextLine().split(":")[1];
+         Print = sc.nextLine().split(":")[1];
+    }
+    public static void main(String args[]) throws Exception{
+        //Read Configuration file and save each field into jarFile,words,Freqs
+        readClass();
         //Dynamically loading class from jar by using reflection
-        URL url = new File(jarFile).toURI().toURL();
-        System.out.println(url.toString());
-        URL[] urls = {new URL(url.toString())};
-
+        URL urlWord = new File("./plugins/Words.jar").toURI().toURL();
+        URL urlFreqs = new File("./plugins/Freqs.jar").toURI().toURL();
+        URL urlPrint = new File("./plugins/Print.jar").toURI().toURL();
+        URL[] urls = {new URL(urlWord.toString()),new URL(urlFreqs.toString()),
+                        new URL(urlPrint.toString())};
         //System.out.println(Words);
         Class cWords = Class.forName(Words,true,new URLClassLoader(urls));
         Class cFreqs = Class.forName(Freqs,true,new URLClassLoader(urls));
@@ -31,9 +36,7 @@ public class Nineteen {
         TFFreqs tfFreqs = (TFFreqs) oFreqs;
         TFPrint tfPrint = (TFPrint) oPrint;
         //call methods
-
-        tfPrint.doPrint(tfFreqs.top25(tfWords.extractWords("../pride-and-prejudice.txt")));
-
+        tfPrint.doPrint(tfFreqs.top25(tfWords.extractWords(args[0])));
     }
 
 }
